# toy-rust-repo-3223

./: .gitignore  README.md  TODOS.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs  mongodb.rs  redis.rs  types.rs
src/components/: ConnectionDialog.tsx  EditableResultsTable.tsx  ExportDialog.tsx  QueryEditor.tsx  QueryHistoryPanel.tsx  ResultsTable.tsx  SavedQueriesPanel.tsx  SchemaBrowser.tsx  Sidebar.tsx  TableStructureEditor.tsx  Toolbar.tsx
src/stores/: connectionStore.ts  queryStore.ts
src/styles/: global.css
src/types/: index.ts  tauri.d.ts
src/utils/: export.ts  sqlFormatter.ts
