[package]
name = "datagrip-alternative"
version = "1.0.0"
description = "Cross-platform database management system - DataGrip alternative"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "sqlite",
    "postgres", 
    "mysql",
    "any",
    "chrono",
    "runtime-tokio",
] }
rusqlite = { version = "0.29", features = ["bundled"] }
mysql = { version = "24" }
redis = { version = "0.24" }
mongodb = { version = "2.8" }
uuid = { version = "1" }
futures = "0.3"
futures-util = "0.3"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
